--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-"We'll have something here in some time! (May be!)"
+<!DOCTYPE html>
+<html>
+  <body>
+    <p>"We'll have something here in some time! (May be!)"</p>
+    <p>Till then, here's a link to my github repo: <a href="https://github.com/KshitizSethia">https://github.com/KshitizSethia</a></p>
+    <p>and my resume: <a href="http://in.linkedin.com/in/sethiakshitiz">http://in.linkedin.com/in/sethiakshitiz</a></p>
+  </body>
+</html>
