--- a/leisure.html
+++ b/leisure.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Kshitiz Sethia - Home</title>
+		<title>Leisure - Kshitiz Sethia</title>
 
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -55,7 +55,7 @@ var STYLE_PREFIX = 'wsite';
 		function initFlyouts(){
 			initPublishedFlyoutMenus(
 				[{"id":"853723200914115146","title":"Home","url":"index.html","target":""},{"id":"177309985222905663","title":"Work","url":"work.html","target":""},{"id":"862867060744271284","title":"Leisure","url":"leisure.html","target":""}],
-				"853723200914115146",
+				"862867060744271284",
 				"<li class=\"wsite-menu-item-wrap\"><a href=\"#\"class=\"wsite-menu-item\">{{title}}<\/a><\/li>",
 				'active',
 				false,
@@ -74,7 +74,7 @@ var STYLE_PREFIX = 'wsite';
 </script>
 		
 	</head>
-	<body class="landing-page  wsite-theme-light  wsite-page-index"><div class="body-wrap">
+	<body class="short-header wsite-theme-light  wsite-page-leisure"><div class="body-wrap">
 	<input type="checkbox" id="nav-trigger" class="nav-trigger">
 
 	<div id="header">
@@ -101,7 +101,7 @@ var STYLE_PREFIX = 'wsite';
 			<div id="navigation">
 <ul class="wsite-menu-default">
 		
-		<li id="active"
+		<li id="pg853723200914115146"
 			class="wsite-menu-item-wrap"
 			>
 			<a href="index.html"
@@ -125,7 +125,7 @@ var STYLE_PREFIX = 'wsite';
 			
 		</li>
 		
-		<li id="pg862867060744271284"
+		<li id="active"
 			class="wsite-menu-item-wrap"
 			>
 			<a href="leisure.html"
@@ -138,34 +138,18 @@ var STYLE_PREFIX = 'wsite';
 		</li>
 </ul>
 </div>
-			<div class="banner-wrap wsite-background">
-				<div id="banner">
-					<div id="banner-container">
-						<h2><span class="wsite-text wsite-headline">
-	Dream, persevere, achieve
-</span></h2>
-						<p><span class="wsite-text wsite-headline-paragraph">
-	I am a Master's in Computer Science student at New York University (Courant Institute of Mathematical Sciences).<br /><br />I work on Machine Learning and Natural Language Processing.<br /><br />In my spare time, I like to craft cars out of cardboard ;)
-</span></p>	
-						<div class="button-wrap"><div style="text-align:left;"><div style="height: 0px; overflow: hidden;"></div>
-<a class="wsite-button wsite-button-large wsite-button-highlight" href="uploads/kshitiz_sethia_-_resume.pdf" target="_blank">
-<span class="wsite-button-inner">Resume</span>
-</a>
-<div style="height: 0px; overflow: hidden;"></div></div></div>
-					</div>
-				</div>
-			</div>
+			<div class="banner-wrap wsite-background"></div>
 			<div id="content-wrapper">
 				<div id="content"><div id='wsite-content' class='wsite-elements wsite-not-footer'>
-<h2 class="wsite-content-title" style="text-align:left;">Contact Details</h2>
+<h2 class="wsite-content-title" style="text-align:left;"><font size="6">Here's how I relax:</font></h2>
 
-<h2 class="wsite-content-title" style="text-align:left;"><font size="2" style="font-weight: normal;">EMAIL ADDRESS</font></h2>
+<div><div style="height: 30px; overflow: hidden; width: 100%;"></div>
+<hr class="styled-hr" style="width:100%;"></hr>
+<div style="height: 30px; overflow: hidden; width: 100%;"></div></div>
 
-<div class="paragraph" style="text-align:left;"><span style="">kshitizsethia@gmail.com</span><br /><span style="">kshitiz.sethia@nyu.edu</span></div>
+<h2 class="wsite-content-title" style="text-align:left;">Ideas</h2>
 
-<h2 class="wsite-content-title" style="text-align:left;"><font size="2" style="font-weight: normal;">TELEPHONE NUMBER</font></h2>
-
-<div class="paragraph" style="text-align:left;">+1 718-839-4550 (US)</div></div>
+<div class="paragraph" style="text-align:left;"><span style="line-height: 1.5; background-color: initial;">I often discuss ideas with friends and have started to collect them at one place. Some might feel dumb after a while, I plan to build the others. Feel free to build any idea below, just let me know so I can use it as well :)</span><br /><ul style=""><li><strong>List of Pros and Cons from reviews about a product: </strong>Nobody has the time to read all reviews of a product. Let's have an algo which can extract aspects of a product from these reviews and summarize user opinions on these aspects. Example: Speaker: deep base/sounds shallow, good highs and lows, clarity etc.</li><li><strong>Building a Word2Vec model for songs: </strong>Extract sound features from a song and it's lyrics, try to feed this to a word2vec model. This can now be used for song recommendation using the variety of ways Word2Vec is used in NLP.</li><li><strong>Text search using Camera: </strong>We often search for textual data in large forms/tables/lists/newspapers. Build a mobile app which can search for text in the image it is seeing and highlight the paper where a match is found. This search can also look for similar words.</li><li><strong>Condensed news from multiple sources: </strong>This idea would be useful to you if you use a news&nbsp;aggregator<span style="line-height: 1.5; background-color: initial;">.&nbsp;</span><span style="line-height: 1.5; background-color: initial;">I have multiple&nbsp;newspapers on my feedly feed. An algo should detect the different articles talking about the same topic, and only show one of them. If there's anything substantial being discussed in an omitted article, that should be shown at the end of the chosen article. Other feature can be: use of more recent/specific information, for example: "2500 students attended" should be preferred over "many students attended"</span></li><li style=""><strong style="">Game tutor in "HoloLens" like device:</strong>&nbsp;A virtual reality headgear which can tell you what was wrong with your Golf swing right in front of your eyes. It can tell you where to hit the striker in Snooker so that you get your cannon shot, or have just the right spin. This device can be lent to Golf courses or Snooker parlors and help beginners learn without a coach.</li><li style=""><strong>Construct a simple explanation for any concept: </strong>Create an algo which explains concepts like "Photosynthesis", "Markov Models" with adjustable amount of simplicity.</li><li style=""><strong>Predicting when a program will be loaded:</strong>&nbsp;Predict which program can be started on a computer at a given time. This could help reduce boot times and load times for programs.</li></ul></div></div>
 </div>
 			</div>
 		</div>
@@ -178,7 +162,7 @@ var STYLE_PREFIX = 'wsite';
 		<div id="navmobile" class="nav">
 <ul class="wsite-menu-default">
 		
-		<li id="active"
+		<li id="pg853723200914115146"
 			class="wsite-menu-item-wrap"
 			>
 			<a href="index.html"
@@ -202,7 +186,7 @@ var STYLE_PREFIX = 'wsite';
 			
 		</li>
 		
-		<li id="pg862867060744271284"
+		<li id="active"
 			class="wsite-menu-item-wrap"
 			>
 			<a href="leisure.html"
