included contact tab

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Kshitiz Sethia - Home</title>
+<title>Contact - Kshitiz Sethia</title>
 
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -16,7 +16,7 @@
 	href="http://cdn2.editmysite.com/css/social-icons.css?buildtime=1234"
 	media="screen,projection" />
 <link rel="stylesheet" type="text/css"
-	href="files/main_style.css?1441859330" title="wsite-theme-css" />
+	href="files/main_style.css?1441891748" title="wsite-theme-css" />
 <link
 	href='http://fonts.googleapis.com/css?family=Raleway:400,300,200,700&subset=latin,latin-ext'
 	rel='stylesheet' type='text/css' />
@@ -187,7 +187,7 @@
 						"url" : "leisure.html",
 						"target" : ""
 					} ],
-					"853723200914115146",
+					"250810870321184499",
 					"<li class=\"wsite-menu-item-wrap\"><a href=\"#\"class=\"wsite-menu-item\">{{title}}<\/a><\/li>",
 					'active',
 					false,
@@ -211,7 +211,7 @@
 </script>
 
 </head>
-<body class="landing-page  wsite-theme-light  wsite-page-index">
+<body class="short-header wsite-theme-light  wsite-page-contact">
 	<div class="body-wrap">
 		<input type="checkbox" id="nav-trigger" class="nav-trigger">
 
@@ -236,44 +236,65 @@
 				<div id="navigation">
 					<ul class="wsite-menu-default">
 
+						<li id="pg853723200914115146" class="wsite-menu-item-wrap">
+							<a href="index.html" class="wsite-menu-item"> Home </a>
+
+						</li>
+
+						<li id="pg177309985222905663" class="wsite-menu-item-wrap">
+							<a href="work.html" class="wsite-menu-item"> Work </a>
+
+						</li>
+
 						<li id="active" class="wsite-menu-item-wrap"><a
-							href="index.html" class="wsite-menu-item"> Home </a></li>
-
-						<li id="pg177309985222905663" class="wsite-menu-item-wrap"><a
-							href="work.html" class="wsite-menu-item"> Work </a></li>
-
-						<li id="pg250810870321184499" class="wsite-menu-item-wrap"><a
 							href="contact.html" class="wsite-menu-item"> Contact </a></li>
 
-						<li id="pg862867060744271284" class="wsite-menu-item-wrap"><a
-							href="leisure.html" class="wsite-menu-item"> Leisure </a></li>
+						<li id="pg862867060744271284" class="wsite-menu-item-wrap">
+							<a href="leisure.html" class="wsite-menu-item"> Leisure
+						</a>
+
+						</li>
 					</ul>
 				</div>
-				<div class="banner-wrap wsite-background">
-					<div id="banner">
-						<div id="banner-container">
-							<h2>
-								<span class="wsite-text wsite-headline"> Dream,
-									persevere, achieve </span>
-							</h2>
-							<p>
-								<span class="wsite-text wsite-headline-paragraph"> I am a
-									Master's in Computer Science student at New York University
-									(Courant Institute of Mathematical Sciences).<br /> <br />I
-									work on Machine Learning and Natural Language Processing.<br />
-									<br />In my spare time, I like to craft cars out of cardboard
-									;)
-								</span>
-							</p>
-							<div class="button-wrap">
-								<div style="text-align: left;">
-									<div style="height: 0px; overflow: hidden;"></div>
-									<a
-										class="wsite-button wsite-button-large wsite-button-highlight"
-										href="uploads/kshitiz_sethia_-_resume.pdf" target="_blank">
-										<span class="wsite-button-inner">Resume</span>
-									</a>
-									<div style="height: 0px; overflow: hidden;"></div>
+				<div class="banner-wrap wsite-background"></div>
+				<div id="content-wrapper">
+					<div id="content">
+						<div id='wsite-content' class='wsite-elements wsite-not-footer'>
+							<div>
+								<div class="wsite-multicol">
+									<div class="wsite-multicol-table-wrap" style="margin: 0 -15px;">
+										<table class="wsite-multicol-table">
+											<tbody class="wsite-multicol-tbody">
+												<tr class="wsite-multicol-tr">
+													<td class="wsite-multicol-col"
+														style="width: 50%; padding: 0 15px;">
+
+
+
+														<div class="paragraph" style="text-align: left;">
+															<font color="#2a2a2a">Email Address:</font><br />kshitizsethia@gmail.com<br />kshitiz.sethia@nyu.edu
+														</div>
+
+
+
+													</td>
+													<td class="wsite-multicol-col"
+														style="width: 50%; padding: 0 15px;">
+
+
+
+														<div class="paragraph" style="text-align: left;">
+															<font color="#2a2a2a">Phone Number:</font><br />+1 718
+															839 4550
+														</div>
+
+
+
+													</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -293,17 +314,23 @@
 			<div id="navmobile" class="nav">
 				<ul class="wsite-menu-default">
 
+					<li id="pg853723200914115146" class="wsite-menu-item-wrap">
+						<a href="index.html" class="wsite-menu-item"> Home </a>
+
+					</li>
+
+					<li id="pg177309985222905663" class="wsite-menu-item-wrap">
+						<a href="work.html" class="wsite-menu-item"> Work </a>
+
+					</li>
+
 					<li id="active" class="wsite-menu-item-wrap"><a
-						href="index.html" class="wsite-menu-item"> Home </a></li>
-
-					<li id="pg177309985222905663" class="wsite-menu-item-wrap"><a
-						href="work.html" class="wsite-menu-item"> Work </a></li>
-
-					<li id="pg250810870321184499" class="wsite-menu-item-wrap"><a
 						href="contact.html" class="wsite-menu-item"> Contact </a></li>
 
-					<li id="pg862867060744271284" class="wsite-menu-item-wrap"><a
-						href="leisure.html" class="wsite-menu-item"> Leisure </a></li>
+					<li id="pg862867060744271284" class="wsite-menu-item-wrap">
+						<a href="leisure.html" class="wsite-menu-item"> Leisure </a>
+
+					</li>
 				</ul>
 			</div>
 		</div>
