--- a/work.html
+++ b/work.html
@@ -177,6 +177,11 @@
 						"url" : "work.html",
 						"target" : ""
 					}, {
+						"id" : "250810870321184499",
+						"title" : "Contact",
+						"url" : "contact.html",
+						"target" : ""
+					}, {
 						"id" : "862867060744271284",
 						"title" : "Leisure",
 						"url" : "leisure.html",
@@ -237,6 +242,9 @@
 						<li id="active" class="wsite-menu-item-wrap"><a
 							href="work.html" class="wsite-menu-item"> Work </a></li>
 
+						<li id="pg250810870321184499" class="wsite-menu-item-wrap"><a
+							href="contact.html" class="wsite-menu-item"> Contact </a></li>
+
 						<li id="pg862867060744271284" class="wsite-menu-item-wrap"><a
 							href="leisure.html" class="wsite-menu-item"> Leisure </a></li>
 					</ul>
@@ -289,8 +297,8 @@
 									Wikipedia ( <a
 									href="https://github.com/KshitizSethia/TextSummarization"
 									title="">code</a> | <a
-									href="uploads/textsummarization_-_report.pdf"
-									target="_blank" title="">report </a>)
+									href="uploads/textsummarization_-_report.pdf" target="_blank"
+									title="">report </a>)
 								</strong><br />
 								<ul>
 									<li><span
@@ -363,7 +371,7 @@
 									<li><strong
 										style="line-height: 1.5; background-color: initial;">"VITSat
 											1" Picosat project: </strong>
-									<ul>
+										<ul>
 											<li>VIT University's attempt at making a pico-satellite.</li>
 											<li>We worked as a team on designing the hardware
 												architecture, kernel and batch scheduler for the satellite.</li>
@@ -373,7 +381,7 @@
 										</ul></li>
 									<li style=""><strong>Developing a Grid Computing
 											Network using Java RMI:&nbsp;</strong>
-									<ul>
+										<ul>
 											<li>Developed a 5 node grid which shared computing power
 												using Java RMI.</li>
 											<li>Primary intent was to get a hands-on experience of
@@ -383,7 +391,7 @@
 										</ul></li>
 									<li style=""><strong style="">Computational grid
 											using Process Virtual Machine:</strong>
-									<ul>
+										<ul>
 											<li>Used Process Virtual Machine (PVM) to build a
 												heterogeneous computational grid consisting of Windows and
 												Linux hosts</li>
@@ -423,6 +431,9 @@
 
 					<li id="active" class="wsite-menu-item-wrap"><a
 						href="work.html" class="wsite-menu-item"> Work </a></li>
+
+					<li id="pg250810870321184499" class="wsite-menu-item-wrap"><a
+						href="contact.html" class="wsite-menu-item"> Contact </a></li>
 
 					<li id="pg862867060744271284" class="wsite-menu-item-wrap"><a
 						href="leisure.html" class="wsite-menu-item"> Leisure </a></li>
