Added GP, edited resume wording

--- a/work.html
+++ b/work.html
@@ -257,6 +257,13 @@
 							</h2>
 
 							<div class="paragraph" style="text-align: left;">
+								<strong style="">Study of Gaussian Processes
+									(nonparametric models) for regression and classification </strong><br />
+								<ul>
+									<li><span
+										style="line-height: 1.5; background-color: initial;">Studied
+											and coded in Python to better understand the machinery of Gaussian Processes</span><br /></li>
+								</ul><br/>
 								<strong style="">Acronym Disambiguation (ongoing
 									|&nbsp;<a href="https://github.com/KshitizSethia/AcroDisam"
 									title="">code</a>&nbsp;)
