--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 									<a
 										class="wsite-button wsite-button-large wsite-button-highlight"
 										href="uploads/kshitiz_sethia_-_resume.pdf" target="_blank">
-										<span class="wsite-button-inner">Resume</span>
+										<span class="wsite-button-inner">Résumé</span>
 									</a>
 									<div style="height: 0px; overflow: hidden;"></div>
 								</div>
