added link to recommendations

--- a/work.html
+++ b/work.html
@@ -262,11 +262,12 @@
 								<ul>
 									<li><span
 										style="line-height: 1.5; background-color: initial;">Studied
-											and coded in Python to better understand the machinery of Gaussian Processes</span><br /></li>
-								</ul><br/>
-								<strong style="">Acronym Disambiguation (ongoing
-									|&nbsp;<a href="https://github.com/KshitizSethia/AcroDisam"
-									title="">code</a>&nbsp;)
+											and coded in Python to better understand the machinery of
+											Gaussian Processes</span><br /></li>
+								</ul>
+								<br /> <strong style="">Acronym Disambiguation
+									(ongoing |&nbsp;<a
+									href="https://github.com/KshitizSethia/AcroDisam" title="">code</a>&nbsp;)
 								</strong><br />
 								<ul>
 									<li><span
@@ -323,9 +324,13 @@
 							<div class="wsite-spacer" style="height: 50px;"></div>
 
 							<h2 class="wsite-content-title" style="text-align: left;">
-								<font size="5">Software Engineering</font><br /> <br />
+								<font size="5">Software Engineering</font>
 							</h2>
-
+							<div class="paragraph" style="text-align: left;">
+								<span style="line-height: 1.5; background-color: initial;"><a
+									href="https://www.linkedin.com/in/sethiakshitiz#endorsements">(Recommendations)</a></span>
+							</div>
+							<br />
 							<div class="paragraph" style="text-align: left;">
 								<strong style>System Software Engineer at Hewlett
 									Packard R&amp;D ( Bangalore, 2011 - 2014 )</strong><br />
@@ -363,8 +368,7 @@
 										</ul></li>
 								</ul>
 								<br /> <strong style><span style="line-height: 36px;">Intern
-										at eBay India Development Center (Chennai, 2011)</font>
-								</span></strong> <br />
+										at eBay India Development Center (Chennai, 2011)</font> </span></strong> <br />
 								<ul>
 									<li><span
 										style="line-height: 1.5; background-color: initial;">Refactoring
