reco, update text

--- a/work.html
+++ b/work.html
@@ -327,8 +327,8 @@
 								<font size="5">Software Engineering</font>
 							</h2>
 							<div class="paragraph" style="text-align: left;">
-								<span style="line-height: 1.5; background-color: initial;"><a
-									href="https://www.linkedin.com/in/sethiakshitiz#endorsements">(Recommendations)</a></span>
+								<span style="line-height: 1.5; background-color: initial;">(<a
+									href="https://www.linkedin.com/in/sethiakshitiz#endorsements">Recommendations, on LinkedIn</a>)</span>
 							</div>
 							<br />
 							<div class="paragraph" style="text-align: left;">
