--- a/leisure.html
+++ b/leisure.html
@@ -236,21 +236,14 @@
 				<div id="navigation">
 					<ul class="wsite-menu-default">
 
-						<li id="pg853723200914115146" class="wsite-menu-item-wrap">
-							<a href="index.html" class="wsite-menu-item"> Home </a>
+						<li id="pg853723200914115146" class="wsite-menu-item-wrap"><a
+							href="index.html" class="wsite-menu-item"> Home </a></li>
 
-						</li>
+						<li id="pg177309985222905663" class="wsite-menu-item-wrap"><a
+							href="work.html" class="wsite-menu-item"> Work </a></li>
 
-						<li id="pg177309985222905663" class="wsite-menu-item-wrap">
-							<a href="work.html" class="wsite-menu-item"> Work </a>
-
-						</li>
-
-						<li id="pg250810870321184499" class="wsite-menu-item-wrap">
-							<a href="contact.html" class="wsite-menu-item"> Contact
-						</a>
-
-						</li>
+						<li id="pg250810870321184499" class="wsite-menu-item-wrap"><a
+							href="contact.html" class="wsite-menu-item"> Contact </a></li>
 
 						<li id="active" class="wsite-menu-item-wrap"><a
 							href="leisure.html" class="wsite-menu-item"> Leisure </a></li>
@@ -280,50 +273,79 @@
 									let me know so I can use it as well :)</span><br />
 								<ul style="">
 									<li><strong>List of Pros and Cons from reviews
-											about a product: </strong>Nobody has the time to read all reviews of a
-										product. Let's have an algo which can extract aspects of a
-										product from these reviews and summarize user opinions on
-										these aspects. Example: Speaker: deep base/sounds shallow,
-										good highs and lows, clarity etc.</li>
+											about a product: </strong>
+										<ul>
+											<li>Nobody has the time to read all reviews of a
+												product. Let's have an algo which can extract aspects of a
+												product from these reviews and summarize user opinions on
+												these aspects.</li>
+											<li>Example: Speaker: deep base/sounds shallow, good
+												highs and lows, clarity etc.</li>
+										</ul></li>
 									<li><strong>Building a Word2Vec model for songs:
-									</strong>Extract sound features from a song and it's lyrics, try to feed
-										this to a word2vec model. This can now be used for song
-										recommendation using the variety of ways Word2Vec is used in
-										NLP.</li>
-									<li><strong>Text search using Camera: </strong>We often
-										search for textual data in large
-										forms/tables/lists/newspapers. Build a mobile app which can
-										search for text in the image it is seeing and highlight the
-										paper where a match is found. This search can also look for
-										similar words.</li>
+									</strong>
+										<ul>
+											<li>Extract sound features from a song and it's lyrics,
+												try to feed this to a word2vec model. This can now be used
+												for song recommendation using the variety of ways Word2Vec
+												is used in NLP.</li>
+										</ul></li>
+									<li><strong>Text search using Camera: </strong>
+										<ul>
+											<li>We often search for textual data in large
+												forms/tables/lists/newspapers. Build a mobile app which can
+												search for text in the image it is seeing and highlight the
+												paper where a match is found.</li>
+											<li>This search can also look for similar words.</li>
+											<li>discussed with <a
+												href="https://www.linkedin.com/profile/view?id=AAkAAAGleP8BJ8Kb5239MSnjsUz2R2h3hfIlDaE">Adarsh
+													Jois</a> and <a
+												href="https://www.linkedin.com/profile/view?id=AAkAAADE38MBEnZ2Lwdng7vAM9r_TZy6kSRv5-4">Balasubramanian
+													Gopalakrishnan</a></li>
+										</ul></li>
 									<li><strong>Condensed news from multiple sources:
-									</strong>This idea would be useful to you if you use a
-										news&nbsp;aggregator<span
-										style="line-height: 1.5; background-color: initial;">.&nbsp;</span><span
-										style="line-height: 1.5; background-color: initial;">I
-											have multiple&nbsp;newspapers on my feedly feed. An algo
-											should detect the different articles talking about the same
-											topic, and only show one of them. If there's anything
-											substantial being discussed in an omitted article, that
-											should be shown at the end of the chosen article. Other
-											feature can be: use of more recent/specific information, for
-											example: "2500 students attended" should be preferred over
-											"many students attended"</span></li>
+									</strong>
+										<ul>
+											<li>This idea would be useful to you if you use a news
+												aggregator. I have multiple newspapers on my feedly feed. An
+												algo should detect the different articles talking about the
+												same topic, and only show one of them.</li>
+											<li>If there's anything substantial being discussed in
+												an omitted article, that should be shown at the end of the
+												chosen article.</li>
+											<li>Another feature can be: use of more recent/specific
+												information, for example: "2500 students attended" should be
+												preferred over "many students attended"</li>
+										</ul></li>
 									<li style=""><strong style="">Game tutor in
-											"HoloLens" like device:</strong>&nbsp;A virtual reality headgear which
-										can tell you what was wrong with your Golf swing right in
-										front of your eyes. It can tell you where to hit the striker
-										in Snooker so that you get your cannon shot, or have just the
-										right spin. This device can be lent to Golf courses or Snooker
-										parlors and help beginners learn without a coach.</li>
+											"HoloLens" like device:</strong>
+										<ul>
+											<li>A virtual reality headgear which can tell you what
+												was wrong with your Golf swing right in front of your eyes.
+												It can tell you where to hit the striker in Snooker so that
+												you get your cannon shot, or have just the right spin.</li>
+											<li>This device can be lent to Golf courses or Snooker
+												parlors and help beginners learn without a coach.</li>
+											<li>discussed with Ramanathan, <a
+												href="https://about.me/soham.sankaran">Soham Sankaran</a>, <a
+												href="https://www.linkedin.com/in/chintaksheth">Chintak
+													Sheth</a>, <a href="https://www.linkedin.com/in/gaurangsadekar">Gaurang
+													Sadekar</a></li>
+										</ul></li>
 									<li style=""><strong>Construct a simple
-											explanation for any concept: </strong>Create an algo which explains
-										concepts like "Photosynthesis", "Markov Models" with
-										adjustable amount of simplicity.</li>
+											explanation for any concept: </strong>
+										<ul>
+											<li>Create an algo which explains concepts like
+												"Photosynthesis", "Markov Models" with adjustable amount of
+												simplicity.</li>
+										</ul></li>
 									<li style=""><strong>Predicting when a program
-											will be loaded:</strong>&nbsp;Predict which program can be started on
-										a computer at a given time. This could help reduce boot times
-										and load times for programs.</li>
+											will be loaded:</strong>
+										<ul>
+											<li>Predict which program can be started on a computer
+												at a given time. This could help reduce boot times and load
+												times for programs.</li>
+										</ul></li>
 								</ul>
 							</div>
 						</div>
@@ -343,20 +365,14 @@
 			<div id="navmobile" class="nav">
 				<ul class="wsite-menu-default">
 
-					<li id="pg853723200914115146" class="wsite-menu-item-wrap">
-						<a href="index.html" class="wsite-menu-item"> Home </a>
+					<li id="pg853723200914115146" class="wsite-menu-item-wrap"><a
+						href="index.html" class="wsite-menu-item"> Home </a></li>
 
-					</li>
+					<li id="pg177309985222905663" class="wsite-menu-item-wrap"><a
+						href="work.html" class="wsite-menu-item"> Work </a></li>
 
-					<li id="pg177309985222905663" class="wsite-menu-item-wrap">
-						<a href="work.html" class="wsite-menu-item"> Work </a>
-
-					</li>
-
-					<li id="pg250810870321184499" class="wsite-menu-item-wrap">
-						<a href="contact.html" class="wsite-menu-item"> Contact </a>
-
-					</li>
+					<li id="pg250810870321184499" class="wsite-menu-item-wrap"><a
+						href="contact.html" class="wsite-menu-item"> Contact </a></li>
 
 					<li id="active" class="wsite-menu-item-wrap"><a
 						href="leisure.html" class="wsite-menu-item"> Leisure </a></li>
