--- a/games/index.html
+++ b/games/index.html
@@ -21,13 +21,13 @@
 	</div>
 	<div id="mainWindow">
 		<div id="bids">
-			<h2>Auction Status</h2>
+			<h2>Bid Status</h2>
 			<table id="itemsTable" border=1px; width=90% align="center">
 				<thead>
-					<th>Index</th>
-					<th>Item</th>
-					<th>Won By</th>
-					<th>Winning Amount</th>
+					<td>Index</td>
+					<td>Item</td>
+					<td>Won By</td>
+					<td>Winning Amount</td>
 				</thead>
 			</table>
 		</div>
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 	<div id="sidebar">
-		<h2 style="color: white">Player Console</h2>
+		<h2>Player Console</h2>
 		<fieldset>
 			<table id="player_console">
 			</table>
