dist QA added to work

--- a/work.html
+++ b/work.html
@@ -257,6 +257,29 @@
 							</h2>
 
 							<div class="paragraph" style="text-align: left;">
+								<strong style="">Natural language question answering
+									system ( <a href="uploads/Distributed_QA_report.pdf">report</a> )</strong><br />
+								<ul>
+									<li><span
+										style="line-height: 1.5; background-color: initial;">
+											(Natural language question) -> [ Factoid-based question
+											answering system ] -> (paragraph containing the answer)</span><br /></li>
+									<li><span
+										style="line-height: 1.5; background-color: initial;">Example:
+											<br /> Q: Who was named the 2009 Nobel Peace Prize laureate?
+											<br />A: Nine months after his inauguration, Obama was named
+											the 2009 Nobel Peace Prize laureate.
+									</span><br /></li>
+									<li><span
+										style="line-height: 1.5; background-color: initial;">Used
+											<ul>
+												<li>NLTK (for parse-tree, PoS Tagging and Named Entity
+													Recognition)</li>
+												<li>Hadoop MapReduce + Pig for querying Wikipedia dump
+													and ranking of search results</li>
+											</ul>
+									</span><br /></li>
+								</ul>
 								<strong style="">Study of Gaussian Processes
 									(nonparametric models) for regression and classification </strong><br />
 								<ul>
@@ -328,7 +351,9 @@
 							</h2>
 							<div class="paragraph" style="text-align: left;">
 								<span style="line-height: 1.5; background-color: initial;">(<a
-									href="https://www.linkedin.com/in/sethiakshitiz#endorsements">Recommendations, on LinkedIn</a>)</span>
+									href="https://www.linkedin.com/in/sethiakshitiz#endorsements">Recommendations,
+										on LinkedIn</a>)
+								</span>
 							</div>
 							<br />
 							<div class="paragraph" style="text-align: left;">
@@ -368,7 +393,8 @@
 										</ul></li>
 								</ul>
 								<br /> <strong style><span style="line-height: 36px;">Intern
-										at eBay India Development Center (Chennai, 2011)</font> </span></strong> <br />
+										at eBay India Development Center (Chennai, 2011)</font>
+								</span></strong> <br />
 								<ul>
 									<li><span
 										style="line-height: 1.5; background-color: initial;">Refactoring
